--- a/SimpleViewer.Infrastructure/SimpleViewer.Infrastructure.csproj
+++ b/SimpleViewer.Infrastructure/SimpleViewer.Infrastructure.csproj
@@ -43,7 +43,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SeqImageFiles.cs" />
+    <Compile Include="ImageCache.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WrappingStream.cs" />
   </ItemGroup>
